<?xml version="1.0"?>
<package>
  <name>sample_nodelet</name>
  <version>0.1.0</version>
  <description>A ROS nodelet of fiesta</description>

  <maintainer email="mark.finean@stx.ox.ac.uk">Mark Finean</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>fiesta</build_depend>
  <build_depend>gpu_voxels_tester</build_depend>
  <build_depend>voxblox_ros</build_depend>
  <build_depend>voxblox</build_depend>
  <build_depend>voxblox_msgs</build_depend>
  <build_depend>voxblox_rviz_plugin</build_depend>
  <!-- <depend>voxblox_msgs</depend>
  <depend>voxblox_rviz_plugin</depend>  -->

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>fiesta</run_depend>
  <run_depend>gpu_voxels_tester</run_depend>
  <run_depend>voxblox_ros</run_depend>
  <run_depend>voxblox</run_depend>
  <run_depend>voxblox_msgs</run_depend>
  <run_depend>voxblox_rviz_plugin</run_depend>

  <export>
    <nodelet plugin="${prefix}/fiesta_nodelet.xml" />
  </export>
</package>
